# thesis-tracker

./: README.md  api-secret.txt  docker-compose.dev.yml  docker-compose.prod.yml
api/: Dockerfile.dev  Dockerfile.prod  pyproject.toml
api/src/api/: auth.py  database.py  main.py
client/: Dockerfile.dev  Dockerfile.prod  next.config.js  package.json  tailwind.config.ts
client/src/app/: api.ts  graph.tsx  layout.tsx  page.tsx
scripts/: insert.sh  populate.sh  pyproject.toml
scripts/src/scripts/: core.py  populate.py  stats.py  upload.py
